# maxpybot

./: .gitignore  CHANGELOG.md  MIGRATION.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: README.md  api-groups.md  cookbook.md  fsm-and-storage.md  getting-started.md  openapi-workflow.md  public-api.md  public-schemas.md  release-checklist.md  sending-messages.md  types-reference.md  updates-and-dispatcher.md  webhook-and-subscriptions.md
examples/: api_groups_overview.py  fsm_feedback_flow.py  polling_basic.py  subscriptions_manage.py  uploads_basic.py  webhook_https_server.py
maxpybot/: __init__.py  api_client.py  constants.py  exceptions.py
maxpybot/api/: __init__.py  base.py  bots.py  chats.py  messages.py  subscriptions.py  uploads.py
maxpybot/compat/: __init__.py  attachments.py  capabilities.py  normalizer.py  update_parser.py
maxpybot/dispatcher/: __init__.py  context.py  di.py  dispatcher.py  filters.py  magic_filters.py  polling.py  router.py  webhook.py
maxpybot/dispatcher/filters/: __init__.py
maxpybot/fsm/: __init__.py  context.py  memory.py  redis.py  storage.py
maxpybot/transport/: __init__.py  client.py  models.py  retry.py
maxpybot/types/: __init__.py  adapters.py  base.py  keyboards.py  models.py  schemas.py
maxpybot/utils/: __init__.py
tests/api/: test_api_client.py  test_bots_api.py  test_chats_api.py  test_high_level_send.py  test_messages_api.py  test_operation_parity.py  test_public_dto_returns.py  test_request_payload_schemas.py  test_subscriptions.py  test_subscriptions_api.py
tests/compat/: test_update_parser.py
tests/dispatcher/: test_di_future_annotations.py  test_di_resilience.py  test_dispatcher.py
tests/examples/: test_examples_smoke.py
tests/fsm/: test_context.py  test_memory_storage.py  test_redis_storage.py
tests/transport/: test_client.py  test_models.py  test_retry.py
tests/types/: test_callback_helpers.py  test_keyboards.py  test_public_dto_access.py  test_request_schemas.py  test_shortcuts.py
tools/: generate_models.py  sync_max_openapi.py
